Update MaintenanceTaskInMemoryRepository to use the panache dao instead of the concurrent hash map to manipulate entities