@@ -6,8 +6,6 @@ import com.bmw.maintenance.domaininteraction.MaintenanceTasks;
 
 import java.time.LocalDateTime;
 import java.util.*;
-import java.util.concurrent.ConcurrentHashMap;
-import java.util.concurrent.atomic.AtomicLong;
 import java.util.stream.Collectors;
 
 import jakarta.enterprise.context.ApplicationScoped;
@@ -20,21 +18,20 @@ import jakarta.ws.rs.NotFoundException;
 @ApplicationScoped
 public class MaintenanceTaskInMemoryRepository implements MaintenanceTasks {
 
-    private final Map<Long, MaintenanceTaskEntity> storage = new ConcurrentHashMap<>();
-    private final AtomicLong idCounter = new AtomicLong(1L);
     private final MaintenanceTaskMapper mapper;
+    private final MaintenanceTaskPanacheDao dao;
 
     @Inject
-    public MaintenanceTaskInMemoryRepository(MaintenanceTaskMapper mapper) {
+    public MaintenanceTaskInMemoryRepository(MaintenanceTaskMapper mapper, MaintenanceTaskPanacheDao dao) {
         this.mapper = mapper;
+        this.dao = dao;
     }
 
     @Override
     public MaintenanceTask create(MaintenanceTask task) {
         MaintenanceTaskEntity entity = mapper.toEntity(task);
-        entity.setId(idCounter.getAndIncrement());
 
-        storage.put(entity.getId(), entity);
+        dao.persist(entity);
 
         return mapper.toDomain(entity);
     }
@@ -42,61 +39,48 @@ public class MaintenanceTaskInMemoryRepository implements MaintenanceTasks {
     @Override
     public MaintenanceTask findById(String taskId) {
         Long id = Long.parseLong(taskId);
-        MaintenanceTaskEntity entity = storage.get(id);
+        Optional<MaintenanceTaskEntity> entityOpt = dao.findByIdOptional(id);
 
-        if (entity == null) {
+        if (entityOpt.isEmpty()) {
             throw new NotFoundException("Task not found: " + taskId);
         }
 
-        return mapper.toDomain(entity);
+        return mapper.toDomain(entityOpt.get());
     }
 
     @Override
     public MaintenanceTask updateStatus(String taskId, TaskStatus newStatus) {
         Long id = Long.parseLong(taskId);
-        MaintenanceTaskEntity entity = storage.get(id);
-
-        if (entity == null) {
-            throw new NotFoundException("Task not found: " + taskId);
-        }
+        MaintenanceTaskEntity entity = dao.findByIdOptional(id).orElseThrow(() -> new NotFoundException("Task not found: " + taskId));
 
         entity.setStatus(newStatus);
         entity.setUpdatedAt(LocalDateTime.now());
 
-        storage.put(id, entity);
+        dao.persist(entity);
         return mapper.toDomain(entity);
     }
 
     @Override
     public MaintenanceTask upsertNotes(String taskId, String notes) {
         Long id = Long.parseLong(taskId);
-        MaintenanceTaskEntity entity = storage.get(id);
-
-        if (entity == null) {
-            throw new NotFoundException("Task not found: " + taskId);
-        }
+        MaintenanceTaskEntity entity = dao.findByIdOptional(id).orElseThrow(() -> new NotFoundException("Task not found: " + taskId));
 
         entity.setNotes(notes);
         entity.setUpdatedAt(LocalDateTime.now());
 
-        storage.put(id, entity);
+        dao.persist(entity);
 
         return mapper.toDomain(entity);
     }
 
     @Override
     public List<MaintenanceTask> findAll() {
-        return storage.values().stream()
-                .map(mapper::toDomain)
-                .collect(Collectors.toList());
+        return dao.findAll().stream().map(mapper::toDomain).toList();
     }
 
     @Override
     public List<MaintenanceTask> findByVin(String vin) {
-        return storage.values().stream()
-                .filter(entity -> vin.equals(entity.getVin()))
-                .map(mapper::toDomain)
-                .collect(Collectors.toList());
+        return dao.find("vin", vin).stream().map(mapper::toDomain).toList();
     }
 
 }
